# quantum-tunneling-sim

./: .gitignore  GnuPlot.md  README.md  fft.cpp  plot.py  test_interp.jl
1D-SSFM/: animate_wavefunction.py  script.py  test_scaling.py
1D-SSFM/src/: CMakeLists.txt  main.cpp  ssfm1d.cpp  ssfm1d.h
2D-SSFM/include/: indicators.hpp
2D-SSFM/results/: animate_wavefunction.py  script.py
2D-SSFM/src/: CMakeLists.txt  main.cpp  ssfm2d.cpp  ssfm2d.h
Final-Presentation/JuliaCode/: PSolver.jl  QuantumDynamics.jl  SpStFT.jl
Final-Presentation/presentation/: Presentation.jl  SpStFt.jl  install.md  standingWave.jl  wavepackages.jl
JuliaCode/: WaveFunc backup 1.jl
Notes/: FFT.md  PlanOfAction.md
custom_fft_solver/: CMakeLists.txt  GnuPlot.md  plot.py
presentation/: A.jl  Presentation.jl
src/: fft.cpp  fft.hpp  main.cpp
